# nix

./: flake.nix  meson.build  meson_options.txt
dependencies/: meson.build
dependencies/aws-sdk-cpp/: meson.build
dependencies/rapidcheck/: meson.build
doc/manual/src/contributing/: meson.md
src/libexpr/: meson.build
src/libexpr/tests/: meson.build
src/libmain/: progress-bar.cc
src/libstore/: local-store.cc  meson.build  store-api.cc
src/libstore/tests/: derived-path.hh  meson.build  outputs-spec.hh  path.hh
src/libutil/: meson.build  util.cc
src/libutil/tests/: hash.cc  meson.build
src/nix/: meson.build
tests/: run-test.sh
tests/flakes/: common.sh
